applications/03-demo-k8s-features/manifests/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    argocd.argoproj.io/sync-wave: "30"
    haproxy.router.openshift.io/disable_cookies: 'true'
  name: route-vmpool-linux
  namespace: demo-k8s-features
spec:
  port:
    targetPort: 80
  tls:
    termination: edge
  to:
    kind: Service
    name: svc-vmpool-linux
    weight: 100
  wildcardPolicy: None
